[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Player/chearecter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio_Assets/step.mp3" type="AudioStream" id=2]
[ext_resource path="res://Untitled.png" type="Texture" id=3]
[ext_resource path="res://Objects/Player/PlayerCam.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/device_astralis_preview.gd" type="Script" id=5]
[ext_resource path="res://Assets/Audio_Assets/background_noise/fan.mp3" type="AudioStream" id=6]

[sub_resource type="CylinderShape" id=1]
radius = 0.4
height = 1.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.05, 0.05, 1.4 )

[sub_resource type="CapsuleMesh" id=3]
radius = 0.4
radial_segments = 10
rings = 2

[node name="KinematicBody" type="KinematicBody" groups=["player", "weighted"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05, 0 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Head" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.192 )

[node name="CollisionShape" type="CollisionShape" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
process_priority = -921
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -0.192089 )
current = true
size = 1.28
far = 1024.0
script = ExtResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0897, 0 )
stream = ExtResource( 2 )
unit_db = 5.0
autoplay = true
stream_paused = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -0.192 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 524288

[node name="Position3D" type="Position3D" parent="RayCast"]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -2.18557e-08, -1, 0, 0.5, -4.37114e-08, 0, 0, 0 )
visible = false
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="crosshair" type="Sprite" parent="."]
position = Vector2( 683, 384 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="PDA" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="PDA2" type="Control" parent="."]
anchor_left = 0.356
anchor_top = 0.587
anchor_right = 0.356
anchor_bottom = 0.587
margin_left = -150.52
margin_top = -249.96
margin_right = 149.48
margin_bottom = 250.04
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="PDA2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -240.0
margin_right = 140.0
margin_bottom = -40.0
bbcode_enabled = true
bbcode_text = "~ \\n Error: [u][b][color=red]\" + info[4]+\"[/color][/b][/u]"
text = "~ \\n Error: \" + info[4]+\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
pitch_scale = 0.6
autoplay = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="PDA" to="." method="_on_PDA_timeout"]
